--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,4 +14,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Test with Maven
-      run: mvn -B test --file pom.xml
+      run: ./mvnw -B test --file pom.xml
